# aoc-rs

./: .gitignore  Cargo.toml
.github/workflows/: pipeline.yml
data/2015/: day13.txt
src/: main.rs
src/aoc_2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs
src/aoc_2019/: day01.rs  day02.rs
src/aoc_2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs
src/aoc_2022/: day01.rs  day02.rs
src/common/: data.rs  mod.rs  parse.rs
