[package]
name = "aoc-rs"
version = "0.1.0"
authors = ["Jakub Sokołowski <jakub.sokolowski1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
fancy-regex = "0.1.0"
strip-ansi-escapes = "0.1.0"
onig = "1"
itertools = "0.10.1"
